--- a/eme-observer/eoml copy 12.html
+++ b/eme-observer/eoml copy 12.html
@@ -3570,17 +3570,12 @@
 
                                                   ${moonIcon} Moonrise: ${info.moonrise}<br>
                                                   ${moonIcon} Moonset: ${info.moonset}<br>
+
                                                   <div style="height:4px"></div>
 
                                                   ${sunIcon} Sunrise: ${info.sunrise}<br>
-                                                  ${sunIcon} Sunset: ${info.sunset}<br>
-
-                                                  <hr style="margin:6px 0;">
-                                                  <b>Noise Profile</b><br>
-                                                  <button id="loadNoiseBtn">Load CSV…</button>
-                                                  <input id="noiseFileInput" type="file" accept=".csv" style="display:none;">
+                                                  ${sunIcon} Sunset: ${info.sunset}
                                                 `;
-
 
                                                 qthMarker.bindPopup(popupContent);
                                             }
