--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -1041,6 +1041,7 @@
             <path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z"/>
         </svg>
     </button><script src="chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-matrix@1.2.0/dist/chartjs-chart-matrix.min.js"></script>
 <script src="chartjs-plugin-annotation@1.4.0"></script>
 <script src="l.ob.js"></script>
 <script src="/leaflet/Leaflet.greatCircle.js"></script>
