--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -1017,8 +1017,8 @@
                 <canvas id="declinationChart"></canvas>
             </div>
             <div id="noiseChartWrapper" style="display: none;">
-                <div id="noiseChartLabel">Noise Profile (dB)</div>
-                <canvas id="noiseColormapChart"></canvas>
+                <div id="noiseChartLabel">Moon-path Noise (dB)</div>
+                <canvas id="noiseCurveChart"></canvas>
             </div>
             <div id="dxChartWrapper" style="display: none;">
                 <div id="dxchartLabel"></div>
